[gd_scene load_steps=13 format=3 uid="uid://dujukbu10vbmm"]

[ext_resource type="Script" path="res://scripts/entities/player.gd" id="1_lgfyt"]
[ext_resource type="Script" path="res://scripts/components/rotation_component.gd" id="3_2h1y6"]
[ext_resource type="Script" path="res://scripts/entities/sword.gd" id="3_7pxxd"]
[ext_resource type="Script" path="res://scripts/components/attack_component.gd" id="3_nq7ea"]
[ext_resource type="Script" path="res://scripts/components/movement_component.gd" id="3_pph25"]
[ext_resource type="Script" path="res://scripts/components/jump_component.gd" id="5_20kj8"]
[ext_resource type="PackedScene" uid="uid://x0oxbha36o2h" path="res://scenes/entities/YBot.tscn" id="5_gusos"]
[ext_resource type="Script" path="res://scripts/components/dodge_component.gd" id="6_66sk2"]
[ext_resource type="Script" path="res://scripts/components/block_component.gd" id="7_qnswb"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lnhvg"]
radius = 0.3

[sub_resource type="CylinderMesh" id="CylinderMesh_dg00e"]
top_radius = 0.02
bottom_radius = 0.02
height = 1.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_cds6g"]
height = 1.0
radius = 0.02

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("character", "movement_component", "jump_component", "block_component", "dodge_component", "rotation_component", "attack_component")]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_lgfyt")
character = NodePath("CharacterModel")
movement_component = NodePath("MovementComponent")
jump_component = NodePath("JumpComponent")
block_component = NodePath("BlockComponent")
dodge_component = NodePath("DodgeComponent")
rotation_component = NodePath("RotationComponent")
attack_component = NodePath("AttackComponent")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.135378, 0)
shape = SubResource("CapsuleShape3D_lnhvg")

[node name="CharacterModel" parent="." instance=ExtResource("5_gusos")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -1.14092, 0)

[node name="GeneralSkeleton" parent="CharacterModel/Armature_004" index="0"]
bones/0/position = Vector3(-0.155662, 8.3458e-09, 0.0700097)
bones/1/rotation = Quaternion(-0.0294586, -0.0508031, -0.0297063, 0.997832)
bones/2/rotation = Quaternion(0.0291417, 0.0121233, 0.0213745, 0.999273)
bones/3/rotation = Quaternion(0.0103862, 0.00345741, 0.0137393, 0.999846)
bones/4/rotation = Quaternion(0.0101632, 0.0036532, 0.0137626, 0.999847)
bones/5/rotation = Quaternion(0.0482665, -0.00110083, 0.00443698, 0.998824)
bones/6/rotation = Quaternion(-0.0670943, 0.0105003, -0.000972878, 0.997691)
bones/8/rotation = Quaternion(0.457119, 0.50033, 0.631873, -0.376095)
bones/9/rotation = Quaternion(0.123287, 0.803269, -0.568143, -0.129512)
bones/10/rotation = Quaternion(0.00913772, -0.707047, 0.00913778, 0.707049)
bones/11/rotation = Quaternion(0.0524224, 0.476204, -0.0170498, 0.877606)
bones/32/rotation = Quaternion(0.476453, -0.479013, -0.633983, -0.376304)
bones/33/rotation = Quaternion(-0.151729, 0.827459, -0.496318, 0.214377)
bones/35/rotation = Quaternion(0.0462492, -0.571443, 0.0379997, 0.818456)
bones/56/rotation = Quaternion(0.136057, 0.0858466, 0.983921, -0.0775751)
bones/57/rotation = Quaternion(-0.0385601, 0.992427, -0.115412, 0.0167652)
bones/58/rotation = Quaternion(-0.0414248, 0.709986, -0.701288, 0.0489738)
bones/61/rotation = Quaternion(-0.0899753, -0.011239, 0.995421, -0.0302663)
bones/62/rotation = Quaternion(0.0324104, 0.994658, -0.0508265, -0.0837981)
bones/63/rotation = Quaternion(0.0116678, 0.687007, -0.726097, -0.0258452)
bones/64/rotation = Quaternion(-9.72314e-08, 0.998043, 0.0625383, -5.57019e-08)

[node name="Sword" type="BoneAttachment3D" parent="CharacterModel/Armature_004/GeneralSkeleton" index="2"]
transform = Transform3D(0.390103, 0.0185341, 0.920584, 0.0603934, -0.998159, -0.00549626, 0.918788, 0.0577412, -0.390504, -0.404188, 0.843154, 0.0654778)
bone_name = "RightHand"
bone_idx = 35
script = ExtResource("3_7pxxd")

[node name="Mesh" type="MeshInstance3D" parent="CharacterModel/Armature_004/GeneralSkeleton/Sword"]
transform = Transform3D(-0.891467, -0.453089, -3.91618e-05, 0.453089, -0.891468, -0.000158824, 3.70497e-05, -0.00015933, 1, 0.168411, 0.443186, 0.0233156)
mesh = SubResource("CylinderMesh_dg00e")

[node name="Area" type="Area3D" parent="CharacterModel/Armature_004/GeneralSkeleton/Sword" groups=["weapon"]]
transform = Transform3D(1, 0, 0, 0, 1, 4.70233e-13, 0, 4.70233e-13, 1, 0, 0, 0)
collision_layer = 4
collision_mask = 8

[node name="Collider" type="CollisionShape3D" parent="CharacterModel/Armature_004/GeneralSkeleton/Sword/Area"]
transform = Transform3D(-0.891466, -0.453088, -3.91619e-05, 0.453088, -0.891466, -0.000158824, 3.70497e-05, -0.00015933, 1, 0.168411, 0.443186, 0.0233156)
shape = SubResource("CylinderShape3D_cds6g")

[node name="AnimationTree" parent="CharacterModel" index="2"]
"parameters/Blocking Speed/scale" = 1.0
"parameters/Blocking Trim/seek_request" = -1.0

[node name="BlockAnimations" parent="CharacterModel" index="6" node_paths=PackedStringArray("parent_animations", "anim_tree")]
parent_animations = NodePath("..")
anim_tree = NodePath("../AnimationTree")

[node name="RotationComponent" type="Node3D" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("3_2h1y6")
player = NodePath("..")

[node name="MovementComponent" type="Node3D" parent="." node_paths=PackedStringArray("target_entity", "rotation_component")]
script = ExtResource("3_pph25")
target_entity = NodePath("..")
rotation_component = NodePath("../RotationComponent")

[node name="JumpComponent" type="Node3D" parent="." node_paths=PackedStringArray("character", "movement_component")]
script = ExtResource("5_20kj8")
character = NodePath("../CharacterModel")
movement_component = NodePath("../MovementComponent")

[node name="BlockComponent" type="Node3D" parent="." node_paths=PackedStringArray("block_animations")]
script = ExtResource("7_qnswb")
block_animations = NodePath("../CharacterModel/BlockAnimations")

[node name="DodgeComponent" type="Node3D" parent="." node_paths=PackedStringArray("entity", "movement_component")]
script = ExtResource("6_66sk2")
entity = NodePath("..")
movement_component = NodePath("../MovementComponent")

[node name="AttackComponent" type="Node3D" parent="." node_paths=PackedStringArray("character", "movement_component", "weapon")]
script = ExtResource("3_nq7ea")
character = NodePath("../CharacterModel")
movement_component = NodePath("../MovementComponent")
weapon = NodePath("../CharacterModel/Armature_004/GeneralSkeleton/Sword")

[editable path="CharacterModel"]
